Bug 399918 - Logout in App dashboard doesnt work
Summary: Logout in App dashboard doesnt work
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: generic-wayland (other bugs)
Version First Reported In: 5.14.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: wayland-only
: 400159 400185 400232 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-10-17 09:40 UTC by Lucia Mrenica
Modified: 2018-10-24 10:14 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lucia Mrenica 2018-10-17 09:40:20 UTC
STEPS TO REPRODUCE
1. Open App dashboard
2. Click on Log out
3. 

OBSERVED RESULT
Nothing happens
Log:
qt.qpa.wayland: Wayland does not support QWindow::requestActivate()
file:///usr/share/plasma/plasmoids/org.kde.plasma.kicker/contents/ui/ItemGridView.qml:420: TypeError: Cannot read property 'itemIndex' of null

EXPECTED RESULT
User is able to confirm loging out or choose different action

SOFTWARE VERSIONS
(available in About System)
KDE Plasma Version: 5.14.1
KDE Frameworks Version: 5.51
Qt Version: 5.12-beta2

ADDITIONAL INFORMATION
Wayland only
Comment 1 Lucia Mrenica 2018-10-17 10:16:10 UTC
The same applies to reboot and poweroff if you have those in favorites.
Comment 2 Alexander Mentyu 2018-10-22 16:37:51 UTC
Cannot reproduce both in Kicker and AppDash
 
Operating System: KDE neon Developer Edition
KDE Plasma Version: 5.14.80
Qt Version: 5.11.1
KDE Frameworks Version: 5.52.0
Comment 3 Lucia Mrenica 2018-10-22 18:15:48 UTC
It's probably because I have newer QT5.
Comment 4 Fabian Vogt 2018-10-23 07:54:08 UTC
https://phabricator.kde.org/D16381
Comment 5 Fabian Vogt 2018-10-23 15:17:54 UTC
Git commit 790f5bf48f2b6b8c23e2dafc8f0071066215d85d by Fabian Vogt.
Committed on 23/10/2018 at 15:17.
Pushed by fvogt into branch 'Plasma/5.12'.

Only use wl-shell for the ksmserver greeters on Qt < 5.12

Summary:
Apparently wl-shell fullscreen is broken on Qt 5.12 now, but we don't need this
workaround anymore.

Test Plan:
Clicked on logout, got the greeter. Without this patch, the greeter
was not visible.

Reviewers: #plasma, davidedmundson

Reviewed By: #plasma, davidedmundson

Subscribers: davidedmundson, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D16381

M  +5    -2    ksmserver/logout-greeter/main.cpp
M  +5    -2    ksmserver/switchuser-greeter/main.cpp

https://commits.kde.org/plasma-workspace/790f5bf48f2b6b8c23e2dafc8f0071066215d85d
Comment 6 Kai Uwe Broulik 2018-10-24 07:44:31 UTC
*** Bug 400159 has been marked as a duplicate of this bug. ***
Comment 7 Kai Uwe Broulik 2018-10-24 07:44:40 UTC
*** Bug 400185 has been marked as a duplicate of this bug. ***
Comment 8 Kai Uwe Broulik 2018-10-24 08:23:03 UTC
*** Bug 400232 has been marked as a duplicate of this bug. ***
Comment 9 David Edmundson 2018-10-24 10:14:36 UTC
>Only use wl-shell for the ksmserver greeters on Qt < 5.12

FYI, fixed now