Only use wl-shell for the ksmserver greeters on Qt < 5.12

Summary:
Apparently wl-shell fullscreen is broken on Qt 5.12 now, but we don't need this
workaround anymore.

BUG: 399918

Test Plan:
Clicked on logout, got the greeter. Without this patch, the greeter
was not visible.

Reviewers: #plasma, davidedmundson

Reviewed By: #plasma, davidedmundson

Subscribers: davidedmundson, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D16381